// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the FeedItemCard ChannelLabel component should render 1`] = `
<View
  flexed={false}
  style={
    Object {
      "alignItems": "center",
      "flex": null,
      "flexDirection": "row",
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="21.6"
    bbWidth="21.6"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
        false,
        Object {
          "flex": 0,
          "height": 21.6,
          "width": 21.6,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGPath
      d="M3.82 13.5H2v-.32C2 6.54 5.22 2 12 2c6.5 0 9.64 4.16 9.98 10.42v1.07h-1.82v-1c-.3-5.8-3.02-8.8-8.16-8.8-5.37 0-8.18 3.32-8.18 9.45v.3zm0 1.7h1.6c.87 0 1.58.66 1.58 1.48v2.13c0 .86-.7 1.5-1.6 1.5-.87 0-1.58-.64-1.58-1.5v-3.6zm0-1.7h1.6c1.87 0 3.4 1.42 3.4 3.18v2.13c0 1.8-1.53 3.2-3.4 3.2C3.5 22 2 20.6 2 18.8v-5.3h1.82zm16.36 1.7v3.6c0 .83-.7 1.5-1.6 1.5-.87 0-1.58-.67-1.58-1.5v-2.1c0-.82.7-1.5 1.6-1.5h1.58zm0-1.7H22v5.3c0 1.77-1.53 3.2-3.4 3.2-1.9 0-3.42-1.43-3.42-3.2v-2.1c0-1.76 1.53-3.2 3.4-3.2h1.6z"
      fill={
        Array [
          0,
          0.3137254901960784,
          0.3137254901960784,
          0.3137254901960784,
          1,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={
        Array [
          "fill",
        ]
      }
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth="1"
      x={0}
      y={0}
    />
  </RNSVGSvgView>
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#505050",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
        }
      }
    >
      Default
    </Text>
  </View>
</View>
`;

exports[`the FeedItemCard ChannelLabel component should render a custom icon 1`] = `
<View
  flexed={false}
  style={
    Object {
      "alignItems": "center",
      "flex": null,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#505050",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 14,
          "lineHeight": 15.78,
        }
      }
    >
      Default
    </Text>
  </View>
</View>
`;

exports[`the FeedItemCard ChannelLabel component should render a skeleton view 1`] = `
<View
  flexed={false}
  style={
    Object {
      "alignItems": "center",
      "flex": null,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#dddddd",
        "borderRadius": 6,
        "height": 21.6,
        "width": 21.6,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#dddddd",
          "borderRadius": 6,
          "height": 14,
          "marginVertical": 0.8899999999999997,
          "width": "40%",
        }
      }
    />
  </View>
</View>
`;
